[package]
name = "deepseek-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "deepseek sdk"
keywords = ["deepseek", "AI"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/deepseek-sdk"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }